--- a/styles.css
+++ b/styles.css
@@ -282,7 +282,7 @@
   .content__pic {
     height: 24vh;
     margin: 0 0 37px 0;
-    padding: 0 9px 0px 0;
+    padding: 0 9px 0 0;
   }
 
   .content__slogan {
