от Дмитрия Колесникова: к след ответу нужно исправить: - браузер не может почему то прочитать твой шрифт woff2, его совсем можно удалить, но добавить хотя-бы ttf, что-бы покрыть больше браузеров - скрипт нужно подключить перед закрывающим тегом боди - подключение шрифтов и стилей нужно поменять местами ( сначала подключаем шрифты, а ниже файл стилей ) - по семантике у тега section должен быть внутри заголовок, если его нет, значит это не section ;) ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- Корретировки внесены

--- a/fonts.css
+++ b/fonts.css
@@ -1,6 +1,8 @@
 @font-face {
   font-family: 'Museo Sans Cyrl';
-  src: url('./fonts/MuseoSansCyrl-100.woff') format('woff');
+  src:
+    url('./fonts/MuseoSansCyrl-100.ttf') format('ttf'),
+    url('./fonts/MuseoSansCyrl-100.woff') format('woff');
   font-weight: 300;
   font-style: normal;
 }
@@ -8,7 +10,7 @@
 @font-face {
   font-family: 'Museo Sans Cyrl300';
   src:
-    url('./fonts/MuseoSansCyrl-300.woff2') format('woff2'),
+    url('./fonts/MuseoSansCyrl-300.ttf') format('ttf'),
     url('./fonts/MuseoSansCyrl-300.woff') format('woff');
   font-weight: 300;
   font-style: normal;
