--- a/styles.css
+++ b/styles.css
@@ -243,6 +243,11 @@
   .images__item {
     padding-right: 3.8%;
   }
+
+  .img3 {
+    padding-right: 0;
+  }
+
 }
 
 @media (min-width: 1025px) and (max-width: 1366px) {
@@ -300,6 +305,10 @@
 
   .images__item {
     padding-right: 3.85%;
+  }
+
+  .img3 {
+    padding-right: 0;
   }
 }
 
